--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -110,7 +110,10 @@ About | Karunya Eye Hospital
 <section>
   <div class="text-center mt-5">
     <h2 class="title-color">QUALITY POLICY</h2>
-    <p class="mt-4 mb-5 justify-text">Karunya Eye Hospital is dedicated to delivering comprehensive, world-class eye care in a safe and patient-friendly. With a strong commitment to quality, professional ethics, and advanced medical expertise, we ensure the highest standards of diagnosis, treatment, and vision care while continuously enhancing patient satisfaction through a superior Quality Management System.</p>
+    <p class="mt-4 mb-5 justify-text">Karunya Eye Hospital is dedicated to delivering comprehensive, world-class eye
+      care in a safe and patient-friendly. With a strong commitment to quality, professional ethics, and advanced
+      medical expertise, we ensure the highest standards of diagnosis, treatment, and vision care while continuously
+      enhancing patient satisfaction through a superior Quality Management System.</p>
   </div>
 </section>
 
@@ -121,7 +124,9 @@ About | Karunya Eye Hospital
       <div class="col-lg-4">
         <div class="about-content pr-4 mt-4 mt-lg-0">
           <h2 class="title-color">OUR MISSION</h2>
-          <p class="mt-4 mb-5">We are dedicated to provide superior patient care with personalized attention to clinical excellence, patient safety and an unparalleled passion and commitment to assure the very best healthcare for those we serve.</p>
+          <p class="mt-4 mb-5">We are dedicated to provide superior patient care with personalized attention to clinical
+            excellence, patient safety and an unparalleled passion and commitment to assure the very best healthcare for
+            those we serve.</p>
           <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i
               class="fa-solid fa-angles-right text-white"></i></a>
         </div>
@@ -182,7 +187,8 @@ About | Karunya Eye Hospital
             class="card-img-top rounded approach-img" />
           <div class="card-body">
             <h4 class="card-title">Hospital with Compassion</h4>
-            <p class="card-text">We provide compassionate eye care with a positive attitude to ensure best treatment to all patients visiting our Centres.</p>
+            <p class="card-text">We provide compassionate eye care with a positive attitude to ensure best treatment to
+              all patients visiting our Centres.</p>
           </div>
         </div>
       </div>
@@ -194,7 +200,8 @@ About | Karunya Eye Hospital
             class="card-img-top rounded approach-img" />
           <div class="card-body">
             <h4 class="card-title">Integrity and Excellence</h4>
-            <p class="card-text">We work as a Team to provide comprehensive eye care, act ethically, take responsibility for the treatment and care.</p>
+            <p class="card-text">We work as a Team to provide comprehensive eye care, act ethically, take responsibility
+              for the treatment and care.</p>
           </div>
         </div>
       </div>
