--- a/templates/contactform.html
+++ b/templates/contactform.html
@@ -4,17 +4,17 @@
 
 {% block content %}
 <section class="page-title bg-1">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block text-left">
-          <span class="text-white">Get in Touch</span>
-          <h1 class="text-capitalize mb-5 text-lg">Contact Us</h1>
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block text-left">
+                    <span class="text-white">Get in Touch</span>
+                    <h1 class="text-capitalize mb-5 text-lg">Contact Us</h1>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
 <!-- contact form start -->
 
@@ -25,7 +25,8 @@
                 <div class="section-title text-left">
                     <h2 class="text-md mb-2">Get in Touch</h2>
                     <div class="divider mx-auto my-4"></div>
-                    <p class="mb-5">Have questions about your eye health? Reach out to us for expert advice and consultations.</p>
+                    <p class="mb-5">Have questions about your eye health? Reach out to us for expert advice and
+                        consultations.</p>
                 </div>
             </div>
         </div>
@@ -43,33 +44,39 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <input name="name" id="name" type="text" class="form-control" placeholder="Patient's Full Name" required>
+                                <input name="name" id="name" type="text" class="form-control"
+                                    placeholder="Patient's Full Name" required>
                             </div>
                         </div>
 
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <input name="email" id="email" type="email" class="form-control" placeholder="Your Email Address" required>
+                                <input name="email" id="email" type="email" class="form-control"
+                                    placeholder="Your Email Address" required>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <input name="subject" id="subject" type="text" class="form-control" placeholder="Reason for Inquiry" required>
+                                <input name="subject" id="subject" type="text" class="form-control"
+                                    placeholder="Reason for Inquiry" required>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <input name="phone" id="phone" type="text" class="form-control" placeholder="Your Contact Number" required>
+                                <input name="phone" id="phone" type="text" class="form-control"
+                                    placeholder="Your Contact Number" required>
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group-2 mb-4">
-                        <textarea name="message" id="message" class="form-control" rows="8" placeholder="Describe Your Eye Concern or Request" required></textarea>
+                        <textarea name="message" id="message" class="form-control" rows="8"
+                            placeholder="Describe Your Eye Concern or Request" required></textarea>
                     </div>
 
                     <div class="text-center">
-                        <input class="btn btn-main btn-round-full" name="submit" type="submit" value="Send Message"></input>
+                        <input class="btn btn-main btn-round-full" name="submit" type="submit"
+                            value="Send Message"></input>
                     </div>
                 </form>
             </div>
@@ -78,20 +85,23 @@
 </section>
 
 <div class="google-map" style="width: 100%; height: 450px;">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63050.539692750055!2d76.78275339999999!3d9.0035157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b060bf796384583%3A0xe1de9ae1b786c755!2sKarunya%20Eye%20Hospital%20%26%20Opticals!5e0!3m2!1sen!2sin!4v1740202375779!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63050.539692750055!2d76.78275339999999!3d9.0035157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b060bf796384583%3A0xe1de9ae1b786c755!2sKarunya%20Eye%20Hospital%20%26%20Opticals!5e0!3m2!1sen!2sin!4v1740202375779!5m2!1sen!2sin"
+        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
 
 <section class="section contact-info pb-0">
     <div class="container">
-         <div class="row">
+        <div class="row">
             <div class="col-lg-4 col-sm-6 col-md-6">
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-live-support"></i>
                     <h5>Emergency Helpline</h5>
                     <br>
                     <br>
-                     +91 97456 88850
+                    +91 97456 88850
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
@@ -107,9 +117,9 @@
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-location-pin"></i>
                     <h5>Our Location</h5>
-                     ADOOR <br>
-                     PANDALAM <br>
-                     KOTTARAKKARA <br>
+                    ADOOR <br>
+                    PANDALAM <br>
+                    KOTTARAKKARA <br>
                 </div>
             </div>
         </div>
