--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -12,7 +12,8 @@ Doctors | Karunya Eye Hospital
       <div class="col-md-12">
         <div class="block text-left">
           <span class="text-white">Our Panel of Doctors</span>
-          <h1 class="text-capitalize mb-5 text-lg">Your health is our priority. Special care from our dedicated doctors</h1>
+          <h1 class="text-capitalize mb-5 text-lg">Your health is our priority. Special care from our dedicated doctors
+          </h1>
         </div>
       </div>
     </div>
@@ -26,7 +27,8 @@ Doctors | Karunya Eye Hospital
         <div class="section-title">
           <h2>Meet Our Eye Specialists</h2>
           <div class="divider mx-auto my-4"></div>
-          <p>Our dedicated team of Ophthalmologists and Eye Specialists are committed to provide excellent care using the latest technology in eye treatment.</p>
+          <p>Our dedicated team of Ophthalmologists and Eye Specialists are committed to provide excellent care using
+            the latest technology in eye treatment.</p>
         </div>
       </div>
     </div>
